<resources>

    <string name="app_name" translatable="false">BattStats</string>

    <string name="description_background">background</string>

    <string name="notification_title">Checking battery</string>
    <string name="notification_text_short">Remove this notification clicking on it and disabling them</string>
    <string name="notification_text_long">To remove this notification click on it to open app settings and disable them</string>
    <string name="service_channel_name">Battery check service</string>

    <string name="preview_title">Preview</string>
    <string name="configure_title">Configure</string>
    <string name="preview_background_description">preview background</string>
    <string name="preview_base">Base</string>
    <string name="preview_low">Low</string>
    <string name="preview_charging">Charging</string>
    <string name="preview_full">Full</string>
    <string name="save">Save</string>

    <string name="display_style_text">Text</string>
    <string name="display_style_number">Number</string>

    <string name="click_action_battery">Battery info</string>
    <string name="click_action_config">Widget config</string>
    <string name="click_action_none">None</string>

    <string name="category_general">General</string>
    <string name="title_display_type">Display style</string>
    <string name="title_text_caps">Show battery level in caps</string>
    <string name="title_click_action">Click action</string>
    <string name="summary_click_action">What screen to open when clicking widget</string>

    <string name="category_base">Base style</string>
    <string name="title_base_text_color">Text color</string>
    <string name="title_base_background_enabled">Show background</string>
    <string name="title_base_background_color">Background color</string>

    <string name="category_low">Low battery style</string>
    <string name="title_low_enabled">Customize</string>
    <string name="title_low_text_color">Text color</string>
    <string name="title_low_background_enabled">Show background</string>
    <string name="title_low_background_color">Background color</string>

    <string name="category_charging">Charging style</string>
    <string name="title_charging_enabled">Customize</string>
    <string name="title_charging_text_color">Text color</string>
    <string name="title_charging_background_enabled">Show background</string>
    <string name="title_charging_background_color">Background color</string>

    <string name="category_full">Full battery style</string>
    <string name="title_full_enabled">Customize</string>
    <string name="title_full_text_color">Text color</string>
    <string name="title_full_background_enabled">Show background</string>
    <string name="title_full_background_color">Background color</string>

    <!-- keys for widget config-->
    <string name="key_display_type" translatable="false">display_type</string>
    <string name="key_text_caps" translatable="false">text_caps</string>
    <string name="key_click_action" translatable="false">click_action</string>

    <string name="key_base_text_color" translatable="false">base_text_color</string>
    <string name="key_base_backgound_enabled" translatable="false">base_backgound_enabled</string>
    <string name="key_base_backgound_color" translatable="false">base_backgound_color</string>

    <string name="key_low_enabled" translatable="false">low_enabled</string>
    <string name="key_low_text_color" translatable="false">low_text_color</string>
    <string name="key_low_backgound_enabled" translatable="false">low_backgound_enabled</string>
    <string name="key_low_backgound_color" translatable="false">low_backgound_color</string>

    <string name="key_charging_enabled" translatable="false">charging_enabled</string>
    <string name="key_charging_text_color" translatable="false">charging_text_color</string>
    <string name="key_charging_backgound_enabled" translatable="false">charging_backgound_enabled</string>
    <string name="key_charging_backgound_color" translatable="false">charging_backgound_color</string>

    <string name="key_full_enabled" translatable="false">full_enabled</string>
    <string name="key_full_text_color" translatable="false">full_text_color</string>
    <string name="key_full_backgound_enabled" translatable="false">full_backgound_enabled</string>
    <string name="key_full_backgound_color" translatable="false">full_backgound_color</string>
</resources>
