<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/category_general">
        <ListPreference
            app:defaultValue="text"
            app:entries="@array/type_entries"
            app:entryValues="@array/type_values"
            app:key="@string/key_display_type"
            app:persistent="false"
            app:title="@string/title_display_type" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="@string/key_text_caps"
            app:persistent="false"
            app:title="@string/title_text_caps" />

        <ListPreference
            app:defaultValue="battery"
            app:entries="@array/action_entries"
            app:entryValues="@array/action_values"
            app:key="@string/key_click_action"
            app:persistent="false"
            app:summary="@string/summary_click_action"
            app:title="@string/title_click_action" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/category_base">
        <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
            app:cpv_allowCustom="false"
            app:cpv_colorPresets="@array/colors"
            app:cpv_previewSize="large"
            app:cpv_showAlphaSlider="true"
            app:cpv_showColorShades="false"
            app:defaultValue="@color/default_base_text_color"
            app:key="@string/key_base_text_color"
            app:persistent="false"
            app:title="@string/title_base_text_color" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="@string/key_base_backgound_enabled"
            app:persistent="false"
            app:title="@string/title_base_background_enabled" />

        <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
            app:cpv_allowCustom="false"
            app:cpv_colorPresets="@array/colors"
            app:cpv_previewSize="large"
            app:cpv_showAlphaSlider="true"
            app:cpv_showColorShades="false"
            app:defaultValue="@color/default_base_bg_color"
            app:dependency="@string/key_base_backgound_enabled"
            app:key="@string/key_base_backgound_color"
            app:persistent="false"
            app:title="@string/title_base_background_color" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/category_low">
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="@string/key_low_enabled"
            app:persistent="false"
            app:title="@string/title_low_enabled" />

        <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
            app:cpv_allowCustom="false"
            app:cpv_colorPresets="@array/colors"
            app:cpv_previewSize="large"
            app:cpv_showAlphaSlider="true"
            app:cpv_showColorShades="false"
            app:defaultValue="@color/default_low_text_color"
            app:dependency="@string/key_low_enabled"
            app:key="@string/key_low_text_color"
            app:persistent="false"
            app:title="@string/title_low_text_color" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:dependency="@string/key_low_enabled"
            app:key="@string/key_low_backgound_enabled"
            app:persistent="false"
            app:title="@string/title_low_background_enabled" />

        <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
            app:cpv_allowCustom="false"
            app:cpv_colorPresets="@array/colors"
            app:cpv_previewSize="large"
            app:cpv_showAlphaSlider="true"
            app:cpv_showColorShades="false"
            app:defaultValue="@color/default_low_bg_color"
            app:dependency="@string/key_low_backgound_enabled"
            app:key="@string/key_low_backgound_color"
            app:persistent="false"
            app:title="@string/title_low_background_color" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/category_charging">
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="@string/key_charging_enabled"
            app:persistent="false"
            app:title="@string/title_charging_enabled" />

        <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
            app:cpv_allowCustom="false"
            app:cpv_colorPresets="@array/colors"
            app:cpv_previewSize="large"
            app:cpv_showAlphaSlider="true"
            app:cpv_showColorShades="false"
            app:defaultValue="@color/default_charging_text_color"
            app:dependency="@string/key_charging_enabled"
            app:key="@string/key_charging_text_color"
            app:persistent="false"
            app:title="@string/title_charging_text_color" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:dependency="@string/key_charging_enabled"
            app:key="@string/key_charging_backgound_enabled"
            app:persistent="false"
            app:title="@string/title_charging_background_enabled" />

        <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
            app:cpv_allowCustom="false"
            app:cpv_colorPresets="@array/colors"
            app:cpv_previewSize="large"
            app:cpv_showAlphaSlider="true"
            app:cpv_showColorShades="false"
            app:defaultValue="@color/default_charging_bg_color"
            app:dependency="@string/key_charging_backgound_enabled"
            app:key="@string/key_charging_backgound_color"
            app:persistent="false"
            app:title="@string/title_charging_background_color" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/category_full">
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="@string/key_full_enabled"
            app:persistent="false"
            app:title="@string/title_full_enabled" />

        <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
            app:cpv_allowCustom="false"
            app:cpv_colorPresets="@array/colors"
            app:cpv_previewSize="large"
            app:cpv_showAlphaSlider="true"
            app:cpv_showColorShades="false"
            app:defaultValue="@color/default_full_text_color"
            app:dependency="@string/key_full_enabled"
            app:key="@string/key_full_text_color"
            app:persistent="false"
            app:title="@string/title_full_text_color" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:dependency="@string/key_full_enabled"
            app:key="@string/key_full_backgound_enabled"
            app:persistent="false"
            app:title="@string/title_full_background_enabled" />

        <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
            app:cpv_allowCustom="false"
            app:cpv_colorPresets="@array/colors"
            app:cpv_previewSize="large"
            app:cpv_showAlphaSlider="true"
            app:cpv_showColorShades="false"
            app:defaultValue="@color/default_full_bg_color"
            app:dependency="@string/key_full_backgound_enabled"
            app:key="@string/key_full_backgound_color"
            app:persistent="false"
            app:title="@string/title_full_background_color" />
    </PreferenceCategory>

</PreferenceScreen>